assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
:root {
    --debug-border-color: red;
    
    /* CSS HEX */
    --international-orange-engineering: rgb(195, 0, 0);
    --kombu-green: #374434ff;
    --windsor-tan: #9d5312ff;
    --camel: #bb9b81ff;
    --jonquil: #fbcf1eff;

    /* CSS HEX */
--space-cadet: #1e2245ff;
--st-patricks-blue: #2a2f71ff;
--linen: #fcefe6ff;
--mimi-pink: #f8d0e0ff;
--firebrick: #ba1a26ff;
    
    --game-width: 100%;
    --button-row-width: 75%;

    --background-color:#fcefe6;
    --computer-color:#2a2f71ff;
    
}

* {
    margin: 0;
    padding: 0;
    border: none;
}
h1 {
    font-size: 60px;
    margin-bottom: 0.5em;
    grid-row: 1;
    grid-column: 1/6;
}

body {
    font-family: 'Anton', sans-serif;
    background-color: var(--background-color);
}


/* Make every element with this class a flex container */
.flex-container {
    display: flex;
}

/* Make every element with this class a grid container. */
.grid-container {
    display: grid;
}

/* Set size of images.
    All image tiles should fit the size of the container.
*/
.tile {
    width: 80%;
}

/* Style the game area */
game-area {
    border: 1px solid blue;
    justify-items: center;
    width: 100%;
    height: auto;
    grid-template-columns: auto auto auto auto auto; 
    grid-template-rows: auto auto auto auto;

}

game-play-panel {
   
    width: var(--game-width);
    height: auto;
    justify-content: center;
    align-items: flex-end;
    grid-row: 2;
    grid-column: 1/6;
   
}

/* Style the cards that show the players and computers choices. */
player-card, computer-card {

width: 300px;
height: 300px;
justify-items: center;

}

player-card h2, computer-card h2 {
    font-size: xxx-large;
}

.player-color {
color: var(--international-orange-engineering);
}

.computer-color {
color: var(--computer-color);
}

/* Style the scoreboard */

score-board {
 
    width: 300px;
    height: 200px;
    justify-items: center;
}

score-board h2 {

font-size: 36px;
grid-column: 1/3;
grid-row: 1;
align-self: end;
}

score-board p {
    justify-self: center;
    align-self: center;
    font-size: xxx-large;
}
#player-score {
grid-column: 1;
grid-row: 2;
}

#computer-score{
grid-column: 2;
grid-row: 2;
}

/* Style the game-tile-panel */
game-tile-panel{
   
    width: var(--game-width);
    justify-content: center;
    padding: 1em;
    flex-wrap: wrap;
    grid-row: 3;
    grid-column: 1/6;
    margin-bottom: 1em;
}

game-tile-panel img {
    box-sizing: border-box;
    width: 20%;
    max-width: 200px;
    padding: 1.5em;
}

/* Style the play button */
#play-button {
    width: 150px;
    height: 150px;
    font-size: xxx-large;
    border-radius: 50%;
    margin-right: 10%;
    background-color: var(--international-orange-engineering);
    color: var(--linen);
}

.fa-play{
    color: var(--linen);
    
}

button-row {
    width: var(--button-row-width);
    align-items: baseline;
    justify-content: flex-end;
    grid-row: 4;
    grid-column: 2/5;
}

settings-panel {
    font-size: xx-large;
}

/* Style the switch */
#difficulty-level-switch {
width: 50px;
}


/* style the spock span */
.spock {
    text-transform: uppercase;
    color: var(--international-orange-engineering);
}

/* Media query for a laptop screen */
@media only screen and (max-width: 1440px) {

    h1 {
        font-size: 52px;
    }
}


/* Media query for a mobile screen */

@media only screen and (max-width: 768px){
    game-area {
        margin-top: 1em;
    }
}

/* Media query for a mobile screen */
@media only screen and (max-width: 425px) {
    /* 
    h1 {
        font-size: 48px;
        margin-bottom: 2em;
    }

    game-area {
        grid-template-columns: auto auto;
        grid-template-rows: auto auto auto auto auto;
    }

    player-card {
        grid-row: 2;
        grid-column: 1;

    }

    score-card {
        grid-row: 3;
        grid-column: 1/3;
    }

    computer-card {
        grid-row: 2;
        grid-column: 1;

    }

    button-row {
        flex-direction: column;
    }
 */
    
}

